--- a/1-天天生鲜网页前端设计/index.html
+++ b/1-天天生鲜网页前端设计/index.html
@@ -5,9 +5,57 @@
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 	<title>天天生鲜-首页</title>
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
+	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
 	<!-- 1、 首先先在 css 文件夹下创建一个 reset.css 文件，目的是为了将原有的样式都清除，待会儿自己设计样式 -->
-	<div>ceshi1</div>
+	<div class="header_con">
+		<div class="header">
+			<div class="welcome fl">欢迎来到天天生鲜！</div>
+			<div class="user_info fr">
+
+				<div class="user_login_link fl">
+					<a href="#">登录</a>
+					<span>|</span>
+					<a href="#">注册</a>
+				</div>
+
+				<div class="user_welcome fl">
+					欢迎您：<em>张山</em>
+				</div>
+
+				<div class="user_shopping fl">
+					<span>|</span>
+					<a href="#">我的购物车</a>
+					<span>|</span>
+					<a href="#">我的订单</a>
+				</div>
+			</div>
+		</div>
+	</div>
+
+
+	<div class="logo_bar">
+		<div class="logo fl">
+			<a href="#"><img src="images/logo.png"></a>
+		</div>
+		<div class="search fl">
+			<!-- placeholder的作用：在input框内未输入文字时会有“搜索”两字，输入后“搜索”两字会没有 -->
+			<input type="text" name="" placeholder="搜索" class="input_text fl">
+			<input type="button" name="" value="搜索" class="input_btn fr">
+		</div>
+		<div class="chart fr">
+			<a href="#" class="fl">我的购物车</a>
+			<span class="fr">0</span>
+		</div>
+	</div>
+
+
+
+
+
+
+
+
 </body>
 </html>
