--- a/1-天天生鲜网页前端设计/index.html
+++ b/1-天天生鲜网页前端设计/index.html
@@ -8,6 +8,8 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
+
+	<!-- 最顶栏 -->
 	<!-- 1、 首先先在 css 文件夹下创建一个 reset.css 文件，目的是为了将原有的样式都清除，待会儿自己设计样式 -->
 	<div class="header_con">
 		<div class="header">
@@ -34,7 +36,8 @@
 		</div>
 	</div>
 
-
+	
+	<!-- logo、搜索这一行 -->
 	<div class="logo_bar">
 		<div class="logo fl">
 			<a href="#"><img src="images/logo.png"></a>
@@ -49,10 +52,33 @@
 			<span class="fr">0</span>
 		</div>
 	</div>
+	
 
+	<!-- "全部商品分类"这一行 -->
+	<div class="sub_menu_con">
+		<div class="sub_menu">
+			<h1 class="fl">全部商品分类</h1>
+			<ul class="fl">
+				<li><a href="">首页</a></li>
+				<li><a href="">手机生鲜</a></li>
+				<li><a href="">抽奖</a></li>
+			</ul>
+		</div>
+	</div>
 
+	<div class="center_con">
+		<ul class="main_menu fl">
+			<li><a href="" class="fruit">新鲜水果</a></li>
+			<li><a href="" class="sea">海鲜水产</a></li>
+			<li><a href="" class="meat">猪肉牛肉</a></li>
+			<li><a href="" class="egg">禽类蛋品</a></li>
+			<li><a href="" class="vegetable">新鲜蔬菜</a></li>
+			<li><a href="" class="ice">速冻食品</a></li>
+		</ul>
 
-
+		<div class="slide"></div>
+		<div class="adv"></div>
+	</div>
 
 
 
