将center_con剩余部分全部完成

--- a/1-天天生鲜网页前端设计/index.html
+++ b/1-天天生鲜网页前端设计/index.html
@@ -76,8 +76,32 @@
 			<li><a href="" class="ice">速冻食品</a></li>
 		</ul>
 
-		<div class="slide"></div>
-		<div class="adv"></div>
+		<div class="slide_con fl">
+			<!-- ul>(li>a>img)*3  先暂时放一张，讲到JS再回来-->
+			<ul class="slide">
+				<ul><a href=""><img src="images/slide.jpg" alt="幻灯片" /></a></ul>
+				<!-- <ul><a href=""><img src="" alt="" /></a></ul>
+				<ul><a href=""><img src="" alt="" /></a></ul> -->
+			</ul>
+			
+			<!-- 幻灯片左右两边的小箭头 -->
+			<div class="prev"></div>
+			<div class="next"></div>
+			
+			<!-- 幻灯片底部的小圆点（6个） -->
+			<ul class="points">
+				<li class="active"></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+			</ul>
+		</div>
+		<div class="adv fl">
+			<a href=""><img src="images/adv01.jpg" alt="广告" /></a>
+			<a href=""><img src="images/adv02.jpg" alt="广告" /></a>
+		</div>
 	</div>
 
 
