天天生鲜登录页面完成

--- a/1-天天生鲜网页前端设计/login.html
+++ b/1-天天生鲜网页前端设计/login.html
@@ -19,10 +19,35 @@
 			<p class="slogan fl">日夜兼程·急速送达</p>
 
 			<div class="form_input_con fr">
-				
+				<div class="form_title">
+					<h1>会员登录</h1>
+					<a href="#">立即注册</a>
+				</div>
+
+				<form action="">
+					<div class="form_group">
+						<input type="text" name="username" class="input_txt" placeholder="请输入用户名" />
+						<span class="error">文字提示</span>
+					</div>
+					
+					<div class="form_group">
+						<input type="password" name="pwd" class="input_pwd" placeholder="请输入密码" />
+						<span class="error">文字提示</span>
+					</div>
+
+					<div class="form_group">
+						<input type="checkbox" name="remember" id="remember" class="input_check fl" />
+						<label for="remember" class="fl" >记住用户名</label>
+						<a href="#" class="find_pass fr">忘记密码</a>
+					</div>
+
+					<input type="submit" value="登 录" class="input_sub" />
+				</form>
 			</div>
 		</div>
 	</div>
+
+
 
 
 	<!-- 最底部信息 -->
