--- a/1-天天生鲜移动端rem重构/index.html
+++ b/1-天天生鲜移动端rem重构/index.html
@@ -9,22 +9,149 @@
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
-<!-- 注意因为为了适配retina屏幕，这里所有的资源都是“2倍资源”，所以所有的image在样式设计时都会尺寸都会被除2 -->
 <body>
 	<!-- 观察移动端图片，一般将其分为上中下三大部分来设计 -->
 	<div class="main_wrap">
 		<div class="header clearfix">
-			
-			
-
+			<a href="#" class="logo"><img src="images/logo.png" alt="天天生鲜-logo"></a>
+			<a href="#" class="search"></a>
 		</div>
 
 		<div class="center_wrap">
+			<div class="slide">
+				<img src="images/slide.jpg" alt="幻灯片">
+			</div>
 			
+			<div class="menu_con clearfix">
+				<!-- ul>(li>a+h2)*8 -->
+				<ul class="menu">
+					<li>
+						<a href=""></a>
+						<h2>水果</h2>
+					</li>
+					<li>
+						<a href=""></a>
+						<h2>海鲜</h2>
+					</li>
+					<li>
+						<a href=""></a>
+						<h2>肉类</h2>
+					</li>
+					<li>
+						<a href=""></a>
+						<h2>禽蛋</h2>
+					</li>
+					<li>
+						<a href=""></a>
+						<h2>蔬菜</h2>
+					</li>
+					<li>
+						<a href=""></a>
+						<h2>速冻</h2>
+					</li>
+					<li>
+						<a href=""></a>
+						<h2>热卖</h2>
+					</li>
+					<li>
+						<a href=""></a>
+						<h2>新品</h2>
+					</li>
+				</ul>
+			</div>
+		
+			<div class="common_model clearfix">
+				<div class="common_title">
+					<h3 class="fl">新鲜水果</h3>
+					<a href="#" class="fr">更多 &gt;</a>
+				</div>
+				<div class="banner"><img src="images/banner.jpg" alt="banner"></div>
 
+				<ul class="goods_list">
+					<li>
+						<a href="#" class="goods_pic"><img src="images/goods.jpg" alt="商品图片"></a>
+						<h4 class="goods_name">新西兰皇家大红富士</h4>
+						<p class="goods_unit">12/提</p>
+						<p class="goods_price">¥68.00</p>
+						<a href="#" class="add_chart"></a>
+					</li>
+
+					<li>
+						<a href="#" class="goods_pic"><img src="images/goods.jpg" alt="商品图片"></a>
+						<h4 class="goods_name">新西兰皇家大红富士</h4>
+						<p class="goods_unit">12/提</p>
+						<p class="goods_price">¥68.00</p>
+						<a href="#" class="add_chart"></a>
+					</li>
+
+					<li>
+						<a href="#" class="goods_pic"><img src="images/goods.jpg" alt="商品图片"></a>
+						<h4 class="goods_name">新西兰皇家大红富士</h4>
+						<p class="goods_unit">12/提</p>
+						<p class="goods_price">¥68.00</p>
+						<a href="#" class="add_chart"></a>
+					</li>
+				</ul>
+			</div>
+
+			<div class="common_model clearfix">
+				<div class="common_title">
+					<h3 class="fl">新鲜水果</h3>
+					<a href="#" class="fr">更多 &gt;</a>
+				</div>
+				<div class="banner"><img src="images/banner.jpg" alt="banner"></div>
+
+				<ul class="goods_list">
+					<li>
+						<a href="#" class="goods_pic"><img src="images/goods.jpg" alt="商品图片"></a>
+						<h4 class="goods_name">新西兰皇家大红富士</h4>
+						<p class="goods_unit">12/提</p>
+						<p class="goods_price">¥68.00</p>
+						<a href="#" class="add_chart"></a>
+					</li>
+
+					<li>
+						<a href="#" class="goods_pic"><img src="images/goods.jpg" alt="商品图片"></a>
+						<h4 class="goods_name">新西兰皇家大红富士</h4>
+						<p class="goods_unit">12/提</p>
+						<p class="goods_price">¥68.00</p>
+						<a href="#" class="add_chart"></a>
+					</li>
+
+					<li>
+						<a href="#" class="goods_pic"><img src="images/goods.jpg" alt="商品图片"></a>
+						<h4 class="goods_name">新西兰皇家大红富士</h4>
+						<p class="goods_unit">12/提</p>
+						<p class="goods_price">¥68.00</p>
+						<a href="#" class="add_chart"></a>
+					</li>
+				</ul>
+			</div>
 		</div>
 
-		<div class="footer">footer</div>
+		<div class="footer">
+			
+			<!-- ul>(li>a+h2)*4 -->
+			<ul>
+				<li>
+					<a href=""></a>
+					<h2>首页</h2>
+				</li>
+				<li>
+					<a href=""></a>
+					<h2>分类</h2>
+				</li>
+				<li>
+					<a href=""></a>
+					<h2>购物车</h2>
+				</li>
+				<li>
+					<a href=""></a>
+					<h2>我的</h2>
+				</li>
+			</ul>
+
+		</div>
 	</div>
 </body>
 </html>
